feat:create menu
