# src/controllers/menu/dto/create-menu.dto.ts
@@ -1,9 +1,0 @@
-import { ApiProperty } from '@nestjs/swagger';
-
-export class CreateMenuDto {
-  @ApiProperty()
-  recipeId: string;
-
-  @ApiProperty()
-  scheduledAt: Date;
-}
